# local-file-server

./: .gitignore  CMakeLists.txt  FileServer.sln  README.md
FileServer/: CMakeLists.txt  ContentReader.cpp  ContentReader.h  FileRequestHandler.cpp  FileRequestHandler.h  FileServer.cpp  FileServer.h  FileServer.vcxproj  FileServer.vcxproj.filters  FileUploadHandler.cpp  FormData.h  FormDataHandler.h  FormDataParser.h  HttpRequest.cpp  HttpRequest.h  Main.cpp  MultipartFormDataParser.cpp  MultipartFormDataParser.h  MultipartPostData.cpp  MultipartPostData.h  MultipartPostDataParser.cpp  MultipartPostDataParser.h  PostDataDecoder.cpp  PostDataDecoder.h  PostDataHandler.h  PostDataParser.cpp  PostDataParser.h  Property.h  RequestHandlerFactory.h  Socket.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StringUtils.cpp  StringUtils.h  UploadFileWriter.cpp  UploadFileWriter.h  UploadHandler.h  UploadedFile.h  UrlEncodedFormDataParser.cpp  (+6 more)
FileServer/linux/: Socket.cpp
FileServer/win32/: Socket.cpp
HttpLib/: CMakeLists.txt  ContentReader.h  FileUploadHandler.h  FormDataParser.cpp  HttpLib.vcxproj  HttpLib.vcxproj.filters  MultipartFormDataParser.h  RequestHandler.h  Socket.h  Stream.h  StreamWriter.cpp  StreamWriter.h  UrlEncodedFormDataParser.h  WebServer.cpp  WebServer.h  pch.h
HttpLib/linux/: Socket.cpp
HttpLib/win32/: Socket.cpp
